<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:icon="@drawable/ic_setting_record"
        android:key="@string/pref_start_record"
        android:title="@string/screenrecord_start_label" />

    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_setting_audio"
        android:key="@string/pref_use_audio"
        android:title="@string/screenrecord_mic_label" />

    <Preference
        android:icon="@drawable/ic_setting_info"
        android:key="info"
        android:selectable="false"
        android:summary="@string/setting_info_description" />

    <PreferenceCategory
        android:key="category_status_bar"
        android:title="@string/setting_category_status_bar">

        <Preference
            android:icon="@drawable/ic_setting_demo_mode"
            android:key="demo_mode"
            android:title="@string/setting_demo_mode_title">
            <intent
                android:action="com.android.settings.action.DEMO_MODE"
                android:targetPackage="com.android.systemui" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="category_info"
        android:title="@string/setting_category_info">

        <Preference
            android:icon="@drawable/ic_setting_playstore"
            android:key="current_version"
            android:title="@string/setting_version_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="market://details?id=soup.tile.screenrecord" />
        </Preference>

        <Preference
            android:icon="@drawable/ic_setting_github"
            android:key="github"
            android:summary="ScreenRecordTile"
            android:title="Github">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/fornewid/ScreenRecordTile" />
        </Preference>

        <Preference
            android:icon="@drawable/ic_setting_face"
            android:key="author"
            android:summary="SOUP"
            android:title="@string/setting_author_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/fornewid" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>
